--- a/styles.css
+++ b/styles.css
@@ -1,152 +1,432 @@
 html {
-    box-sizing: border-box;  
-    font-family: 'Inter', sans-serif;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
 body {
-    background-color: #F8F1E2;
-
-}
-
-footer {
-    background-color: black;
-    color: white;
-    width: 100%;
+  background-color: #f8f1e2;
+  display: block;
+  margin: 8px;
+  padding: 5em;
 }
 
 /* ALl buttons have blue background and white text */
 button {
-    background-color: blue;
-    color: white;
-    /* padding: 0px 10px; */
-    border: none;
-    /* border-radius: 7px; */
-    font-size: 1em;
-    padding: 2 1em;
-    border-radius: 0.2em;
-
+  background-color: #1b4cf9;
+  color: white;
+  /* padding: 0px 10px; */
+  border: none;
+  /* border-radius: 7px; */
+  font-size: 1em;
+  padding: 2 1em;
+  border-radius: 0.2em;
 }
 
-nav {
-    background-color: white;
-     margin: 0;
-    padding: 1%;
-    width: 100%; 
-    }
+header {
+  height: 120px;
+  background-color: white;
+  margin-left: 100px;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
 
+header .logo {
+  width: 15%;
+  height: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+}
 
-ul {
-        display:block;
-        width:100%;
-        margin:0;
-        padding:0;
-        text-align:right;
-    }
+header .logo img {
+  width: 130px;
+  height: 100px;
+}
+header .navigation {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 30px;
+  font-weight: 400;
+  font-size: 15px;
+}
 
- ul li {
-        display:inline-block;
-    }
+header .navigation ul {
+  list-style-type: none;
+  display: flex;
+}
 
+header .navigation ul li {
+  margin: 10px;
+}
 
-li a {
-    display: block;
-    text-decoration: none;
-    color: black;
-    text-align: center;
-    padding: 10px 6px;
- }
- 
+header .navigation ul li a {
+  text-decoration: none;
+  color: black;
+}
 
-
-.wrapper {
+/* .wrapper {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(100px, auto);
+} */
+
+.uppercase {
+  text-transform: uppercase;
 }
 
-img {
-    width: 65%;
-    padding: 1em;
-  
-   
+h1 {
+  text-align: center;
+  font-weight: 700;
+  font-size: 3em;
+  line-height: 61px;
+  padding-top: 40px;
 }
-
 
 h2 {
-    
-    font-weight: 400;
-    text-decoration-line: underline;
+  font-weight: 400;
+  font-size: 25px;
+  text-decoration-line: underline;
 }
 
-h1    {
-        text-align: center;
-        font-weight: 500;
-        font-size: 1.7em;
-
+p.title_caption {
+  text-align: center;
+  font-weight: 500;
+  /* font-size: 25px; */
+  font-size: 1.2em;
+  color: #595555;
+  letter-spacing: 0.12em;
+  /* line-height:  38px; */
 }
 
+#content1::after {
+  /* content: "\a"; */
+  white-space: pre;
+}
+
+#content2::before {
+  content: "\a";
+  line-height: 1.5em;
+  white-space: pre;
+}
+
+div.form {
+  display: block;
+  text-align: center;
+}
+form {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  padding-bottom: 4em;
+}
+
+.search-bar input {
+  background: transparent;
+  border: 1px solid #6b6868;
+  text-align: center;
+  padding: 10px 5px;
+  border-radius: 5px;
+  color: #6b6868;
+  font-weight: 500;
+  font-size: 15px;
+  /* outline: none; */
+}
+
+.search-bar button img {
+  width: 25px;
+}
+
+/* h6 {
+    text-align: center;
+    font-weight: 700;
+    font-size: 2.5em;
+
+} */
 
 h3 {
-    text-align: center;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 2em;
-
+  text-align: center;
+  font-weight: 500;
+  font-size: 1em;
 }
 
-table {
-    width: 100%;
-  }
 
-thead {
-    text-align: center;
-}
-
-td {
-    text-align: center;
-  }
 
 #container {
-    background-color: white;
-    width: 70%;
-    height: 200px;
-    margin: 0 auto;
-    border: 1px solid #003049;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    
+  background-color: #f5f5f5;
+  width: 85%;
+  height: 335px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* block level elements - div container */
 #container div {
-    width: 200px;
-    height: 200px;
-    justify-content: center;
-    align-items: center;
+  width: 200px;
+  height: 260px;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
 }
 
-footer ul {
-        width:100%;
-        margin:0;
-        padding: 40px;
-        text-align:left;
-       
-     
+#container div button {
+  margin-left: 100px;
+}
+
+#container div img {
+  width: 100%;
+  height: 90%;
+  padding: 1em;
+}
+
+.topics_boxes {
+  display: flex;
+}
+
+.billed_monthtly_boxes {
+  display: flex;
 }
 
 #icon {
-    float: left;
-    width: 10%;
+  float: left;
+  width: 10%;
 }
 
-.top_nav_uppercase {
-    text-transform: uppercase;
-     
+.top_nav_menu {
+  display: flex;
+  font-weight: 700;
+  justify-content: flex-start;
 }
 
 .row_list {
-    list-style-type: none;
+  list-style-type: none;
+}
+
+.row_list li {
+  font-weight: 500;
+  line-height: 1.5em;
+  font-size: 0.8em;
+}
+
+.fine_print {
+  text-align: center;
+  font-weight: 400;
+  font-size: 0.3em;
+}
+
+
+.no_text_underline {
+  text-decoration-line: none;
+}
+
+.blue_text {
+  font-weight: 700;
+  font-size: 16px;
+  text-align: right;
+  color: #1b4cf9;
+}
+
+
+
+.box_textBooks {
+  width: 75%;
+  height: 250px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.box_textBooks_cover img {
+  width: 90%;
+  height: 90%;
+  padding: 5em;
+}
+
+.beyond_bold {
+  font-weight: 700;
+  font-size: 1.5em;
+}
+
+.name_small_text {
+  font-weight: 400;
+  font-size: 0.8em;
+}
+
+
+h4 {
+  text-align: center;
+  font-weight: 500;
+  font-size: 1.8em;
+  line-height: 61px;
+}
+
+.center_me {
+  text-align: center;
+}
+
+/* 6x6 category boxes with number of books */
+.white_category_boxes {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.white_category_boxes_item {
+  background: white;
+  border: 1px solid black;
+  width: 225px;
+  height: 75px;
+  font-weight: 400;
+  font-size: 1.2em;
+  margin: 10px;
+  padding: 10px 0 0 8px;
+  border-radius: 5px;
+}
+
+.white_category_boxes_item p {
+  font-size: 0.6em;
+  color: #595555;
+  padding-left: 2px;
+}
+
+.try_now {
+    text-align: center;
     font-weight: 400;
-    font-size: .9em;
+    font-size: 1em;
+    padding-top: 40px;
+}
+
+.white_monthly_boxes {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  padding: 10px;
+}
+
+/* Monthly box price  */
+.white_monthly_boxes_item {
+  background: #ffffff;
+  width: 300px;
+  height: 200px;
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin: 20px;
+  padding-top: 30px;
+  font-weight: 500;
+  font-size: 0.7em;
+  line-height: 25px;
+}
+
+.white_monthly_boxes_item .price {
+  font-size: 2em;
+}
+
+.white_monthly_boxes_item button {
+  width: 250px;
+  height: 30px;
+  font-weight: 700;
+  font-size: 1em;
+  line-height: 24px;
+}
+
+.padding_before_community {
+    padding: 40px 0 15px 0;
+}
+
+/* what people are saying about us with reviews */
+table {
+    width: 100%;
+  }
+  
+  thead {
+    text-align: center;
+    font-weight: 400;
+    font-size: 35px;
+  }
+  
+  #table_title {
+    font-size: 1.5em;
+    text-align: center;
+  }
+  
+  td {
+    text-align: center;
+  }
+
+td p {
+  font-size: 15px;
+}
+
+/* Footer - Bottom black nav */
+footer {
+  background-color: black;
+  color: white;
+  width: 100%;
+  margin-top: 5em;
+  padding-bottom: 2em;
+}
+
+.nav_columns {
+  display: flex;
+  padding: 0 150px;
+}
+
+.nav_columns ul {
+  width: 100%;
+}
+
+.nav_columns h6 {
+  text-transform: uppercase;
+  font-weight: 500;
+  padding-bottom: 5px;
+  font-size: 0.85em;
+}
+
+.social_icons {
+    margin-top: 20px;
+    text-align: center;
+    word-spacing: 30px;
+  }
+  
+.social_icons img {
+    width: 1%;
+  }
+
+/* Responsive portion */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  body {
+    color: blue;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  body {
+    color: green;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  body {
+    color: red;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  body {
+    color: black;
+  }
 }
